--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@mdx-js/react": "^1.6.22",
     "@next/mdx": "^10.1.3",
     "next": "10.1.3",
+    "next-google-fonts": "^2.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.2.0",
     "styled-components": "^5.2.3"
   },
   "devDependencies": {
